# actions-example-python-demo

./: .bandit  README.md  mypy.ini  pyproject.toml
.github/workflows/: cicd.yml
actions_example_python/: main.py
tests/: test_actions_example_python.py
